# omnibioai-api-gateway

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  proxy.py  router.py  security.py
app/middleware/: audit.py  auth.py  hpc.py  policy.py  s2s.py
app/routes/: gateway.py
app/services/: audit_client.py  hpc_policy_client.py  iam_client.py  policy_client.py
core/: config.py  proxy.py
middleware/: policy.py  s2s.py
routes/: gateway.py
services/: iam_client.py
tests/: conftest.py  test_audit_client.py  test_auth_middleware.py  test_config.py  test_gateway_router.py  test_health.py  test_hpc_middleware.py  test_hpc_policy_client.py  test_iam_client.py  test_main_lifecycle.py  test_policy_client.py  test_policy_middleware.py  test_proxy_client.py  test_security.py  test_trace_middleware.py
